fix: input-group style in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -103,12 +103,14 @@ header {
 .input-group {
   display: flex;
   flex-direction: row;
-  border: 1px solid #ccc;
+  border: 3px solid rgba(0, 0, 0, 0.2);
   padding: 8px 10px;
   border-radius: 8px;
 }
 
 input {
+  color: #ccc;
+  background: rgba(0, 0, 0, 0.2);
   flex-grow: 2;
   border: none;
   font-size: 16px;
